<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_reservation_history"
        android:title="@string/reservation_history" />
    <item
        android:id="@+id/nav_order_history"
        android:title="@string/order_history" />
    <item
        android:id="@+id/nav_address"
        android:title="@string/my_address" />
    <item
        android:id="@+id/nav_speciality"
        android:title="@string/specially_for_user" />
    <item
        android:id="@+id/nav_notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/nav_help"
        android:title="@string/help_and_support" />
    <item
        android:id="@+id/nav_about"
        android:title="@string/about" />
    <item
        android:id="@+id/nav_admin"
        android:title="@string/admin" />


</menu>