<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".Fragments.BottomNav_Frags.Reservations_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/user_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/hey_user"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager_1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:elevation="12dp" />

            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                android:id="@+id/dots_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewPager_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                app:dotsColor="@color/app_color"
                app:dotsCornerRadius="20dp"
                app:dotsSize="8dp"
                app:dotsSpacing="4dp"
                app:dotsStrokeColor="@color/white"
                app:dotsStrokeWidth="2dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trending"
                    android:textColor="@color/app_color"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/increase" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="4dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/trending_list" />


            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:text="@string/deals_of_the_day"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager_2"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/banner"
            android:elevation="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:text="@string/reserve_a_table"
            android:textColor="@color/app_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_today"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_layout"
                            android:text="@string/today"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/btn_tomorrow"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_layout"
                            android:text="@string/tomorrow"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/btn_pickDate"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_layout"
                            android:text="@string/pick_a_date"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>