<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet_Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="1dp"
            android:background="@color/darkGrey" />

        <LinearLayout
            android:id="@+id/heading_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserving_a_table_at"
                android:textColor="@color/darkGrey"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/date_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/lightGrey"
            android:padding="12dp">

            <TextView
                android:id="@+id/date_day_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/table_fragment_today_button"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/today"
                    android:textColor="@color/darkGrey" />

                <TextView
                    android:id="@+id/table_fragment_tomorrow_button"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/tomorrow"
                    android:textColor="@color/darkGrey" />


                <LinearLayout
                    android:id="@+id/table_fragment_pick_date_button"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp">

                    <TextView
                        android:id="@+id/pick_date_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/pick_a_date"
                        android:textColor="@color/darkGrey" />

                    <ImageView
                        android:id="@+id/calendar_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/calendar" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <Button
                    android:background="@drawable/button_layout"
                    android:id="@+id/datePickerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pick a Time"
                    android:textSize="22sp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    style="?android:spinnerStyle"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/table_next_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_layout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:src="@drawable/arrow_right" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
