<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_history_RV_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="Today 03:31 pm"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_history_RV_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="1150/-"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/app_name"
            android:textColor="@color/newGrey"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="@dimen/_1sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:background="@color/darkGrey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/dot" />

        <TextView
            android:id="@+id/order_history_RV_UserAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/my_address"
            android:textColor="@color/newGrey"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:src="@drawable/list_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/order_list"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/newGrey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_call"
            android:elevation="@dimen/_27sdp"
            android:layout_margin="@dimen/_12sdp"
            android:text="@string/order_again" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_24sdp"
            android:numStars="5"
            android:progressBackgroundTint="@color/darkGrey"
            android:progressTint="@color/app_color"
            android:rating="3.5" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/newGrey" />

</LinearLayout>